# Emergency-Services-Logistics-Problem-PDDL

./: .gitignore  FAI_domain.pddl  FAI_problem.pddl  README.md  domain1.pddl  domain2.pddl  notes.md  problem1.pddl  problem_2.pddl  sas_plan.1
Problem1/: Report1.md  domain1.pddl  problem1.pddl  sas_plan.1
Problem2/: Report2.md  domain2.pddl  domain2_no_fluents.pddl  problem2.pddl  problem2_no_fluents.pddl  sas_plan.1  sas_plan.2  sas_plan.3  sas_plan.4  sas_plan.5  sas_plan.6
Problem2/Electric/: Report2_electric.md  domain2_battery.pddl  problem2_battery.pddl  sas_plan.1  sas_plan.2  sas_plan.3
Problem3/: Report3.md  domain3.pddl  output_optic_N.txt  output_optic_n_w1,1.txt  output_optic_w5,1.txt  problem3.pddl
Problem3/Electric/: Report3_electric.md  domain3_battery.pddl  problem3_battery.pddl
Problem4/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
Problem4/launch/: commands  plansys2_emergency_transport_launch.py
Problem4/pddl/: emergency_planning.pddl  emergency_transport.pddl
Problem4/plansys2_dynamic_delivery/: CHANGELOG.rst  CMakeLists.txt  package.xml
Problem4/plansys2_dynamic_delivery/launch/: assignment_commands  launcher.py
Problem4/plansys2_dynamic_delivery/pddl/: dynamic_delivery_v1.pddl
Problem4/plansys2_dynamic_delivery/src/: back_to_base_action_node.cpp  deliver_crate_action_node.cpp  load_crate_action_node.cpp  move_action_node.cpp
Problem4/src/: delivery_action_node.cpp  go_back_to_deport_action_node.cpp  load_action_node.cpp  move_action_node.cpp
Prove/: domain1 copy.pddl  domain1_copy.pddl  domain2_prova.pddl  domain3_no_fluents.pddl  problem1_copy.pddl
